--- a/csf-assessment-practice-client/src/app/components/display.component.html
+++ b/csf-assessment-practice-client/src/app/components/display.component.html
@@ -1,1 +1,26 @@
-<p>display works!</p>
+<!-- <p>display works!</p>
+
+<div *ngIf="bundleId$ | async as b" style="font-size: 1.5em;">
+    <table>
+        <tr>
+            Bundle Id &nbsp;&nbsp;
+            {{b.bundleId}}
+        </tr>
+    </table>
+</div>  -->
+
+<div *ngIf="bundleMongoResponse$ | async as b" style="font-size: 1.5em;">
+    <h1>{{b.title}}</h1>
+    <h2> by {{b.name}} on {{b.date}}</h2>
+    <p>{{b.comments}}</p>
+</div> 
+
+<!-- async is not used as it is not an observable or promise -->
+<!-- bundleLinks is just a string[] -->
+<div *ngFor="let link of bundleLinks">
+    <!-- <a href="{{ link }}">{{link}}</a> -->
+    <img src="{{ link }}">
+</div>
+
+<button type="button" [routerLink]="['/form']">Back</button>&nbsp;
+
